server.log
  File "run_server.py", line 8
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
